<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainScreenFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/mainToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:logo="@android:drawable/ic_lock_idle_charging"
        app:menu="@menu/main_menu"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:titleTextColor="@color/black" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:cardCornerRadius="@dimen/card_corner_radius"
        app:cardElevation="@dimen/card_view_elevation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainToolbar">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="@dimen/card_view_elevation"
                android:paddingBottom="@dimen/card_view_pad_bottom">


                <TextView
                    android:id="@+id/tankCircuit"
                    style="@style/textview_btn_style"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="8dp"
                    android:background="@drawable/textview_btn_bgd"
                    android:contentDescription="@string/tank_cct_button"
                    android:text="@string/tank_circuit"
                    app:layout_constraintEnd_toStartOf="@+id/transformer_param_btn"
                    app:layout_constraintHorizontal_chainStyle="spread"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/transformer_param_btn"
                    style="@style/textview_btn_style"
                    android:background="@drawable/textview_btn_bgd"
                    android:contentDescription="@string/transformer_param"
                    android:text="@string/transformer_param"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/tankCircuit"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/ohmsLaw"
                    style="@style/textview_btn_style"
                    android:contentDescription="@string/ohms_law"
                    android:text="@string/ohms_law"
                    app:layout_constraintEnd_toStartOf="@+id/resistorColorCodes"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tankCircuit" />

                <TextView
                    android:id="@+id/resistorColorCodes"
                    style="@style/textview_btn_style"
                    android:contentDescription="@string/resistor_color_codes"
                    android:text="@string/resistor_color_codes"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/ohmsLaw"
                    app:layout_constraintTop_toBottomOf="@+id/transformer_param_btn" />

                <TextView
                    android:id="@+id/equivalent_res_cap"
                    style="@style/textview_btn_style"
                    android:contentDescription="@string/ohms_law"
                    android:text="@string/resistor_arrangement"
                    app:layout_constraintEnd_toStartOf="@+id/network_theorems"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/ohmsLaw" />

                <TextView
                    android:id="@+id/network_theorems"
                    style="@style/textview_btn_style"
                    android:contentDescription="@string/resistor_color_codes"
                    android:text="@string/network_theoremes"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/equivalent_res_cap"
                    app:layout_constraintTop_toBottomOf="@+id/resistorColorCodes" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>